syntax = "proto3";
package castmer;

option go_package = "./castmerservice";

service ClientHandlingService {
    rpc SignUp(SingUpData ) returns(SingUpResponse);
    rpc Login(LoginData ) returns(LoginResponse);
} 

message SingUpData {
    string id = 1 ;
    string name = 2 ;
    string lasname = 3 ;
    string email = 4 ; 
    string password = 5;
}

message SingUpResponse {
    bool response = 1;
}

message LoginData {
    string email = 4 ; 
    string password = 5;
}

message LoginResponse {
    bool response = 1;
}
